--- a/.devcontainer/openai-assistant-chatbot/devcontainer.json
+++ b/.devcontainer/openai-assistant-chatbot/devcontainer.json
@@ -17,7 +17,7 @@
     },
     "forwardPorts": [],
     "portsAttributes": {},
-    "onCreateCommand": "python app.py",
+    "onCreateCommand": "python app_assistant_chatbot.py",
     "secrets": {
       "PAYPAL_CLIENT_ID": {
         "description": "Sandbox client ID of the application.",
